create about us page

--- a/aboutus.html
+++ b/aboutus.html
@@ -58,11 +58,77 @@
         <div class="container">
             <div class="sub_banner_content">
                 <h2>
-                    σχετικά με εμάς</h2>
+                    Σχετικά με εμάς</h2>
             </div>
         </div>
     </div>
-  
+
+
+    <div class="lasvegas_content section">
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-lg-6">
+                    <p>Πιστεύουμε ότι κάθε επισκέπτης του καζίνο είναι μια θεότητα από μόνος του – ένας κύριος του
+                        πεπρωμένου του, ικανός να περιηγηθεί στις ανατροπές του κόσμου των τυχερών παιχνιδιών. Είτε
+                        ρίχνετε τα ζάρια, είτε δοκιμάζετε την τύχη σας στα τραπέζια είτε γυρίζετε τους κουλοχέρηδες,
+                        έχετε τον έλεγχο της περιπέτειάς σας στο παιχνίδι. Και εκεί έρχεται το GamGod – για να γίνει ο
+                        έμπιστος σύντροφός σας, ο χρησμός σας στην πόλη των φώτων, βοηθώντας σας να κάνετε τις πιο
+                        ενημερωμένες επιλογές καθώς περιηγείστε στο συναρπαστικό τοπίο του Λας Βέγκας.</p>
+                </div>
+
+                <div class="col-lg-6  mt-4 mt-lg-0">
+                    <img src="./assets/images/Bellagiobg.jpg" alt="image" class="img-fluid">
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+    <section class="privacy-term section">
+        <div class="container">
+            <div class="row">
+                <div class="col text-center mb-5">
+                    <h2>Σχετικά με εμάς</h2>
+                </div>
+            </div>
+            <h2 class="heading main-heading"></h2>
+            <div class="main-content">
+                <h2>Τι Μας Ξεχωρίζει;</h2>
+                <p>Στο GamGod, δεν είμαστε μόνο εδώ για να απαριθμήσουμε τα καλύτερα καζίνο. είμαστε εδώ για να
+                    επιμεληθούμε μια εμπειρία προσαρμοσμένη για εσάς. Η ομάδα των ειδικών μας σαρώνει το Strip, από το
+                    εμβληματικό έως τα κρυμμένα πετράδια, για να σας προσφέρει ολοκληρωμένες κριτικές που ξεπερνούν τα
+                    βασικά. Δεν είμαστε μόνο για τα παιχνίδια. μιλάμε για την ατμόσφαιρα, τις παραστάσεις, το φαγητό και
+                    τη μαγεία που κάνει κάθε καζίνο μοναδικό.</p>
+
+                <h2>Η αποστολή μας: Gaming Wisdom</h2>
+                <p>Η αποστολή μας είναι να σας εξουσιοδοτήσουμε με τη σοφία να λαμβάνετε τεκμηριωμένες αποφάσεις για την
+                    περιπέτειά σας στο Λας Βέγκας. Είτε είστε έμπειρος high roller είτε επισκέπτης για πρώτη φορά, το
+                    GamGod είναι η πηγή σας για εμπιστευτικές πληροφορίες, συμβουλές ειδικών και μια πασπαλισμένη μαγεία
+                    του Βέγκας.
+                </p>
+
+                <h2>Τι θα βρείτε στο GamGod:</h2>
+                <p>Αναλυτικές κριτικές καζίνο: Βουτήξτε σε λεπτομερείς κριτικές για τα καλύτερα καζίνο στο Λας Βέγκας,
+                    εξερευνώντας τους ορόφους τυχερών παιχνιδιών, τις προσφορές ψυχαγωγίας, τις επιλογές για φαγητό και
+                    πολλά άλλα.
+                </p>
+                <p>Συστάσεις ειδικών: Από εστιατόρια που πρέπει να δοκιμάσετε μέχρι τα πιο καυτά σόου της πόλης,
+                    προσφέρουμε συστάσεις για να αναβαθμίσετε την εμπειρία σας στο Λας Βέγκας.</p>
+                <p>Στρατηγικές τυχερών παιχνιδιών: Είτε είστε επαγγελματίας του πόκερ είτε λάτρης των κουλοχέρηδων, οι
+                    οδηγοί παιχνιδιών μας παρέχουν στρατηγικές για να βελτιώσετε το παιχνίδι σας.
+                </p>
+                <p>Τελευταίες τάσεις: Μείνετε ενημερωμένοι με τις τελευταίες τάσεις, εκδηλώσεις και γεγονότα στον
+                    συνεχώς εξελισσόμενο κόσμο της ψυχαγωγίας του Λας Βέγκας.
+                    Ελάτε μαζί μας στο ταξίδι</p>
+                <p>Το GamGod είναι κάτι περισσότερο από έναν ιστότοπο. είναι μια κοινότητα όσων αναζητούν συγκίνηση,
+                    λάτρεις της περιπέτειας και όσων γνωρίζουν ότι στην Πόλη της Αμαρτίας, κάθε επιλογή μπορεί να είναι
+                    θρυλική. Ελάτε μαζί μας σε αυτό το ταξίδι και αφήστε το GamGod να είναι ο οδηγός σας σε μια εμπειρία
+                    στο Λας Βέγκας που είναι τόσο μοναδική όσο εσείς.</p>
+            </div>
+        </div>
+    </section>
+
+
 
     <footer class="py-5">
         <div class="container">
