--- a/caesarspalace.html
+++ b/caesarspalace.html
@@ -69,6 +69,19 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-lg-6">
+                    <div class="content_section p-0">
+                        <h3 class="">Caesars Palace</h3>
+                        <p>3570 S Las Vegas Blvd, Las Vegas, NV 89109, USA</p>
+                        <div class="rating mb-3">
+                            <!-- 5 stars -->
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star-half-stroke"></i>
+                            <!-- <i class="fa-solid fa-star-half-stroke"></i> -->
+                        </div>                    
+                    </div>
                     <p>Χαίρε Καίσαρα! Μια επίσκεψη στο Caesars Palace στο Λας Βέγκας είναι σαν να μπαίνεις σε ένα
                         επικό blockbuster όπου είσαι ο κύριος χαρακτήρας. Πρώτον, το μεγαλείο – είναι σαν να
                         αποφάσισαν οι αρχιτέκτονες, «Ας χτίσουμε τη Ρώμη, αλλά στη μέση της ερήμου». Τα
@@ -84,6 +97,10 @@
                         εάν είστε έτοιμοι να σας φέρονται σαν μέλη της βασιλικής οικογένειας, με μια πινελιά αρχαίας
                         αίσθησης και μια δόση υπερβολής στο Λας Βέγκας, το Caesars Palace είναι η αίθουσα του
                         θρόνου για την επόμενη αξέχαστη απόδρασή σας στο Βέγκας!</p>
+                        <div class="mt-4 mb-5 mb-lg-0">
+                            <a href="" class="common_btn" target="_blank">More info</a>
+                        </div>
+            
                 </div>
 
                 <div class="col-lg-6">
@@ -92,16 +109,6 @@
                                 src="./assets/images/CaesarsPalace.jpg" alt="" class="img-fluid"></a>
                         <div class="content_section">
                             <h3 class="">Caesars Palace</h3>
-                            <p>3570 S Las Vegas Blvd, Las Vegas, NV 89109, USA</p>
-                            <div class="rating mb-3">
-                                <!-- 5 stars -->
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star-half-stroke"></i>
-                            </div>
-                            <a href="" class="common_btn" target="_blank">More info</a>
                         </div>
                     </div>
                     <!-- <img src="./assets/images/vene1.jpg" alt="image" class="img-fluid"> -->
