--- a/thecosmopolitan.html
+++ b/thecosmopolitan.html
@@ -70,6 +70,19 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-lg-6">
+                    <div class="content_section p-0">
+                        <h3 class="">The Cosmopolitan of Las Vegas</h3>
+                        <p>3708 S Las Vegas Blvd, Las Vegas, NV 89109, USA</p>
+                        <div class="rating mb-3">
+                            <!-- 5 stars -->
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <!-- <i class="fa-solid fa-star-half-stroke"></i> -->
+                        </div>
+
+                    </div>
                     <p>το Cosmopolitan του Λας Βέγκας, όπου η κομψότητα συναντά την παιχνιδιάρικη διάθεση και
                         κάθε στιγμή μοιάζει με σκηνή από ένα σύγχρονο παραμύθι! Αυτό το μέρος είναι σαν το ωραίο
                         παιδί στο πάρτι του Βέγκας – αβίαστα κομψό, λίγο επαναστατικό και πάντα έτοιμο για μια
@@ -86,6 +99,9 @@
                         να ικανοποιήσουν κάθε λαχτάρα, από γκουρμέ έως άνετο φαγητό. Έτσι, αν ψάχνετε για μια
                         εμπειρία στο Βέγκας που είναι εξίσου κομψή, ζωντανή και λίγο επαναστατική, το The
                         Cosmopolitan είναι το εισιτήριό σας για μια βραδινή έξοδο στην πόλη όπως κανένα άλλο!</p>
+                        <div class="mt-4 mb-5 mb-lg-5">
+                            <a href="" class="common_btn" target="_blank">More info</a>
+                        </div>
                 </div>
 
                 <div class="col-lg-6">
@@ -94,16 +110,6 @@
                                 src="./assets/images/TheCosmopolitanofLaVegas.jpg" alt="" class="img-fluid"></a>
                         <div class="content_section">
                             <h3 class="">The Cosmopolitan of Las Vegas</h3>
-                            <p>3708 S Las Vegas Blvd, Las Vegas, NV 89109, USA</p>
-                            <div class="rating mb-3">
-                                <!-- 5 stars -->
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <!-- <i class="fa-solid fa-star-half-stroke"></i> -->
-                            </div>
-                            <a href="" class="common_btn" target="_blank">More info</a>
                         </div>
                     </div>
                     <!-- <img src="./assets/images/vene1.jpg" alt="image" class="img-fluid"> -->
