--- a/mgmgrandhotel.html
+++ b/mgmgrandhotel.html
@@ -70,6 +70,20 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-lg-6">
+                    <div class="content_section p-0">
+                        <h3 class="">MGM Grand Hotel and Casino</h3>
+                        <p>3799 S Las Vegas Blvd, Las Vegas, NV 89109, USA</p>
+                        <div class="rating mb-3">
+                            <!-- 5 stars -->
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <!-- <i class="fa-solid fa-star-half-stroke"></i> -->
+                        </div>
+                        
+                    </div>
                     <p>Κυρίες και κύριοι, καλωσορίσατε στο λάκκο των λιονταριών του ενθουσιασμού – το MGM
                         Grand Hotel and Casino, όπου η φράση &quot;go big or go home&quot; αποκτά ένα εντελώς νέο νόημα!
                         Αυτό το μέρος είναι σαν τον βετεράνο του Βέγκας που δεν φεύγει ποτέ από τη μόδα.
@@ -88,6 +102,9 @@
                         έτοιμοι για ένα ραντεβού με τον βασιλιά της ζούγκλας, όπου κάθε στιγμή είναι ένα στοίχημα
                         διασκέδασης, το MGM Grand είναι το χρυσό εισιτήριό σας για μια εμπειρία Βέγκας που
                         βρυχάται από ενθουσιασμό!</p>
+                        <div class="mt-4 mb-5 mb-lg-0">
+                            <a href="" target="_blank" class="common_btn">More info</a>
+                        </div>
                 </div>
 
                 <div class="col-lg-6">
@@ -96,17 +113,6 @@
                                 src="./assets/images/MGMGrandHotelandCasino.jpg" alt="" class="img-fluid"></a>
                         <div class="content_section">
                             <h3 class="">MGM Grand Hotel and Casino</h3>
-                            <p>3799 S Las Vegas Blvd, Las Vegas, NV 89109, USA</p>
-                            <div class="rating mb-3">
-                                <!-- 5 stars -->
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <!-- <i class="fa-solid fa-star-half-stroke"></i> -->
-                            </div>
-                            <a href="" target="_blank" class="common_btn">More info</a>
                         </div>
                     </div>
                     <!-- <img src="./assets/images/vene1.jpg" alt="image" class="img-fluid"> -->
