--- a/thebellagio.html
+++ b/thebellagio.html
@@ -70,6 +70,19 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-lg-6">
+                    <div class="content_section p-0">
+                        <h3 class="">The Bellagio</h3>
+                        <p>3600 S Las Vegas Blvd, Las Vegas, NV 89109, USA</p>
+                        <div class="rating mb-3">
+                            <!-- 5 stars -->
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star-half-stroke"></i>
+                        </div>
+                     
+                    </div>
                     <p>Μπείτε στον μαγευτικό κόσμο του The Bellagio – όπου η πολυτέλεια, η εκλέπτυνση και μια
                         πινελιά ιδιοτροπίας χορεύουν μαζί σε μια συμφωνία χλιδής! Αυτό το μέρος είναι σαν τα
                         ξενοδοχεία Τζέιμς Μποντ του Λας Βέγκας – αβίαστα δροσερό, απίστευτα κομψό και πάντα σε
@@ -85,6 +98,9 @@
                         δημιουργούν αριστουργήματα που είναι σχεδόν πολύ όμορφα για να τα φας. Οπότε, αν έχετε
                         διάθεση για μάθημα, φαντασία και πολλά wow-factor, το The Bellagio είναι το χρυσό εισιτήριό
                         σας για μια εμπειρία Βέγκας που δεν είναι τίποτα λιγότερο από μαγική!</p>
+                        <div class="mt-4 mb-5 mb-lg-0">
+                            <a href="" class="common_btn" target="_blank">More info</a>
+                        </div>
                 </div>
 
                 <div class="col-lg-6">
@@ -93,16 +109,6 @@
                                 src="./assets/images/TheBellagio.jpg" alt="" class="img-fluid"></a>
                         <div class="content_section">
                             <h3 class="">The Bellagio</h3>
-                            <p>3600 S Las Vegas Blvd, Las Vegas, NV 89109, USA</p>
-                            <div class="rating mb-3">
-                                <!-- 5 stars -->
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star-half-stroke"></i>
-                            </div>
-                            <a href="" class="common_btn" target="_blank">More info</a>
                         </div>
                     </div>
                     <!-- <img src="./assets/images/vene1.jpg" alt="image" class="img-fluid"> -->
