--- a/thevenetianresort.html
+++ b/thevenetianresort.html
@@ -16,9 +16,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=EB+Garamond:wght@500;600;700&family=Inter:wght@500&family=Josefin+Sans:wght@400;500;600;700&family=Lusitana:wght@400;700&family=Poppins:wght@400;500;600;700&family=Quicksand:wght@400;500;600;700&family=Roboto:wght@400;500&display=swap"
         rel="stylesheet">
-
     <!-- font -->
-
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -70,6 +68,19 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-lg-6">
+                    <div class="content_section p-0">
+                        <h3 class="">The Venetian Resort</h3>
+                        <p>3355 S Las Vegas Blvd, Las Vegas, NV 89109, USA</p>
+                        <div class="rating mb-3">
+                            <!-- 5 stars -->
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <!-- <i class="fa-solid fa-star-half-stroke"></i> -->
+                        </div>                    
+                    </div>
                     <p>Αχ, το The Venetian Resort στο Λας Βέγκας – είναι σαν ένα μικρό κομμάτι της Βενετίας που
                         μεταφέρεται μαγικά στην έρημο της Νεβάδα! Από τη στιγμή που περνάτε από τη μεγάλη
                         είσοδο, σας υποδέχεται η γλυκιά σερενάτα των γονδολιέρων που παρασύρονται κατά μήκος
@@ -84,6 +95,9 @@
                         τους γευστικούς σας κάλυκες να χορέψουν χαρούμενα. Έτσι, αν αναζητάτε μια εμπειρία στο
                         Βέγκας που είναι εξίσου μεγαλείο, ψυχαγωγία και ιταλική αίσθηση, το The Venetian Resort
                         είναι το εισιτήριό σας για διακοπές που είναι αληθινό θέαμα στο Strip!</p>
+                        <div class="info_btn_parent mt-4 mb-5 mb-lg-0">
+                            <a href="" class="common_btn" target="_blank">More info</a>
+                        </div>
                 </div>
 
                 <div class="col-lg-6">
@@ -92,17 +106,6 @@
                                 src="./assets/images/TheVenetianResort.jpg" alt="" class="img-fluid"></a>
                         <div class="content_section">
                             <h3 class="">The Venetian Resort</h3>
-                            <p>3355 S Las Vegas Blvd, Las Vegas, NV 89109, USA</p>
-                            <div class="rating mb-3">
-                                <!-- 5 stars -->
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <!-- <i class="fa-solid fa-star-half-stroke"></i> -->
-                            </div>
-                            <a href="" class="common_btn" target="_blank">More info</a>
                         </div>
                     </div>
                     <!-- <img src="./assets/images/vene1.jpg" alt="image" class="img-fluid"> -->
