--- a/wynnlasvegas.html
+++ b/wynnlasvegas.html
@@ -70,6 +70,20 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-lg-6">
+                    <div class="content_section p-0">
+                        <h3 class="">Wynn Las Vegas</h3>
+                        <p>3131 S Las Vegas Blvd, Las Vegas, NV 89109, USA</p>
+                        <div class="rating mb-3">
+                            <!-- 5 stars -->
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <!-- <i class="fa-solid fa-star-half-stroke"></i> -->
+                        </div>
+                      
+                    </div>
                     <p>Wynn Las Vegas – όπου η πολυτέλεια, η κομψότητα και μια απότομη μαγεία συγκρούονται για
                         να δημιουργήσουν μια αξέχαστη εμπειρία στο διάσημο Strip! Το να μπεις στο Wynn είναι σαν
                         να μπαίνεις σε έναν κόσμο όπου κάθε λεπτομέρεια είναι σχολαστικά κατασκευασμένη στην
@@ -84,6 +98,9 @@
                         καλύπτει κάθε ουρανίσκο. Έτσι, αν έχετε διάθεση για ένα ραντεβού με την πολυτέλεια, ένα
                         φλερτ με την τύχη και μια γεύση από την υψηλή ζωή, το Wynn Las Vegas είναι η πρόσκλησή
                         σας σε έναν κόσμο όπου κάθε στιγμή είναι ένα αριστούργημα!</p>
+                        <div class="mt-4 mb-5 mb-lg-0">
+                            <a href="" class="common_btn" target="_blank">More info</a>
+                        </div>
                 </div>
 
                 <div class="col-lg-6">
@@ -92,17 +109,6 @@
                                 src="./assets/images/WynnLasVegas1.avif" alt="" class="img-fluid"></a>
                         <div class="content_section">
                             <h3 class="">Wynn Las Vegas</h3>
-                            <p>3131 S Las Vegas Blvd, Las Vegas, NV 89109, USA</p>
-                            <div class="rating mb-3">
-                                <!-- 5 stars -->
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <!-- <i class="fa-solid fa-star-half-stroke"></i> -->
-                            </div>
-                            <a href="" class="common_btn" target="_blank">More info</a>
                         </div>
                     </div>
                     <!-- <img src="./assets/images/vene1.jpg" alt="image" class="img-fluid"> -->
