--- a/thevenetianresort.html
+++ b/thevenetianresort.html
@@ -33,9 +33,7 @@
             <input type="checkbox" id="nav-check">
             <div class="nav-header">
                 <div class="nav-title">
-                    <a href="./index.html">
-                        <img src="./assets/images/logo.png" alt="">logo
-                    </a>
+                    <a href="./index.html" class="logo"><img src="./assets/images/logo.png" alt="" class="img-fluid"></a>
                 </div>
             </div>
             <div class="nav-btn">
@@ -120,7 +118,7 @@
             <div class="row">
                 <div class="col-lg-6">
                     <div class="footer_left">
-                        <a href="" class="logo"><img src="" alt="" >Logo</a>
+                        <a href="./index.html" class="logo"><img src="./assets/images/logo.png" alt="" class="img-fluid"></a>
                         <ul>
                             <li><a href="./index.html">Home</a></li>
                             <li><a href="./aboutus.html">about us</a></li>
