--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         </nav>
     </header>
     <!-- banner -->
-    <div id="banner" class="sub_banner">
+    <div id="banner" class="sub_banner home_page_banner">
         <img src="./assets/images/Las vegas Banner.jpg" alt="sub_banner_img">
         <div class="container">
             <div class="sub_banner_content">
