--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
             <input type="checkbox" id="nav-check">
             <div class="nav-header">
                 <div class="nav-title">
-                    <a href="./index.html" class="logo"><img src="./assets/images/logo.png" alt="" class="img-fluid"></a>
+                    <a href="./index.html" class="logo"><img src="./assets/images/logo.png" alt=""
+                            class="img-fluid"></a>
                 </div>
             </div>
             <div class="nav-btn">
@@ -85,130 +86,42 @@
     </div>
     <div class="resorts section">
         <div class="container">
-            <div class="row g-5">
-                <div class="col-md-6 col-lg-4">
-                    <div class="resort_card">
-                        <a href="https://www.venetianlasvegas.com/" target="_blank"> <img
-                                src="./assets/images/TheVenetianResort.jpg" alt="" class="img-fluid"></a>
-                        <div class="content_section">
+            <div class="resort_list">
+                <div class="row  align-items-center">
+                    <div class="col-md-4">
+                        <div class="resort_img image_resort_list">
+                            <a href="https://www.venetianlasvegas.com/" target="_blank"> <img
+                                    src="./assets/images/TheVenetianResort.jpg" alt="" class="img-fluid"></a>
+                        </div>
+                    </div>
+                    <div class="col-md-3 ">
+                        <div class="resort_list_content common_padding">
                             <h3 class="">The Venetian Resort</h3>
                             <p>3355 S Las Vegas Blvd, Las Vegas, NV 89109, USA</p>
-                            <div class="rating mb-3">
-                                <!-- 5 stars -->
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <!-- <i class="fa-solid fa-star-half-stroke"></i> -->
+                        </div>
+                    </div>
+                    <div class="col-md-3">
+                               <div class="rating_section common_padding">
+                                <div class="rating">
+                                    <!-- 5 stars -->
+                                    <p class="mb-1">Ratings</p>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <!-- <i class="fa-solid fa-star-half-stroke"></i> -->
+                                </div>
                             </div>
+                    </div>
+                    <div class="col-md-2">
+                        <div class="info_section common_padding">
                             <a href="./thevenetianresort.html" class="common_btn" target="_blank">More info</a>
                         </div>
                     </div>
                 </div>
-
-                <div class="col-md-6  col-lg-4">
-                    <div class="resort_card">
-                        <a href="https://www.caesars.com/caesars-palace" target="_blank"> <img
-                                src="./assets/images/CaesarsPalace.jpg" alt="" class="img-fluid"></a>
-                        <div class="content_section">
-                            <h3 class="">Caesars Palace</h3>
-                            <p>3570 S Las Vegas Blvd, Las Vegas, NV 89109, USA</p>
-                            <div class="rating mb-3">
-                                <!-- 5 stars -->
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star-half-stroke"></i>
-                            </div>
-                            <a href="./caesarspalace.html" class="common_btn" target="_blank">More info</a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-md-6  col-lg-4">
-                    <div class="resort_card">
-                        <a href="https://www.wynnlasvegas.com/" target="_blank"> <img
-                                src="./assets/images/WynnLasVegas1.avif" alt="" class="img-fluid"></a>
-                        <div class="content_section">
-                            <h3 class="">Wynn Las Vegas</h3>
-                            <p>3131 S Las Vegas Blvd, Las Vegas, NV 89109, USA</p>
-                            <div class="rating mb-3">
-                                <!-- 5 stars -->
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <!-- <i class="fa-solid fa-star-half-stroke"></i> -->
-                            </div>
-                            <a href="./wynnlasvegas.html" class="common_btn" target="_blank">More info</a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-md-6  col-lg-4">
-                    <div class="resort_card">
-                        <a href="https://www.cosmopolitanlasvegas.com/" target="_blank"> <img
-                                src="./assets/images/TheCosmopolitanofLaVegas.jpg" alt="" class="img-fluid"></a>
-                        <div class="content_section">
-                            <h3 class="">The Cosmopolitan of Las Vegas</h3>
-                            <p>3708 S Las Vegas Blvd, Las Vegas, NV 89109, USA</p>
-                            <div class="rating mb-3">
-                                <!-- 5 stars -->
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <!-- <i class="fa-solid fa-star-half-stroke"></i> -->
-                            </div>
-                            <a href="./thecosmopolitan.html" class="common_btn" target="_blank">More info</a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-md-6  col-lg-4">
-                    <div class="resort_card">
-                        <a href="https://mgmgrand.mgmresorts.com/en.html" target="_blank"> <img
-                                src="./assets/images/MGMGrandHotelandCasino.jpg" alt="" class="img-fluid"></a>
-                        <div class="content_section">
-                            <h3 class="">MGM Grand Hotel and Casino</h3>
-                            <p>3799 S Las Vegas Blvd, Las Vegas, NV 89109, USA</p>
-                            <div class="rating mb-3">
-                                <!-- 5 stars -->
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <!-- <i class="fa-solid fa-star-half-stroke"></i> -->
-                            </div>
-                            <a href="mgmgrandhotel.html" target="_blank" class="common_btn">More info</a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-md-6  col-lg-4">
-                    <div class="resort_card">
-                        <a href="https://bellagio.mgmresorts.com/en.html" target="_blank"> <img
-                                src="./assets/images/TheBellagio.jpg" alt="" class="img-fluid"></a>
-                        <div class="content_section">
-                            <h3 class="">The Bellagio</h3>
-                            <p>3600 S Las Vegas Blvd, Las Vegas, NV 89109, USA</p>
-                            <div class="rating mb-3">
-                                <!-- 5 stars -->
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star-half-stroke"></i>
-                            </div>
-                            <a href="./thebellagio.html" class="common_btn" target="_blank">More info</a>
-                        </div>
-                    </div>
-                </div>
             </div>
+        
         </div>
     </div>
     <!-- lasvegas_conten -->
@@ -276,7 +189,8 @@
             <div class="row">
                 <div class="col-lg-8">
                     <div class="footer_left">
-                        <a href="./index.html" class="logo"><img src="./assets/images/logo.png" alt="" class="img-fluid"></a>
+                        <a href="./index.html" class="logo"><img src="./assets/images/logo.png" alt=""
+                                class="img-fluid"></a>
                         <ul>
                             <li><a href="./index.html">Home</a></li>
                             <li><a href="./aboutus.html">about us</a></li>
@@ -301,10 +215,75 @@
             </div>
         </div>
     </footer>
+
+
+
+
+    <div class="cookie-alert show">
+        <div class="card-body">
+            <div class="cookie-content">
+                <h4>This website uses cookies</h4>
+                <p>We use cookies to personalise content and ads, to provide social media features and to analyse our
+                    traffic.
+                    We also share information about your use of our site with our social media, advertising and
+                    analytics partners
+                    who may combine it with other information that you’ve provided to them or that they’ve collected
+                    from your use
+                    of their services.
+                </p>
+            </div>
+            <div class="accept-btn">
+                <a href="#" class="accept-cookies common_btn">I Accept</a>
+            </div>
+        </div>
+    </div>
+
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"
         integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
     <script src="./assets/js/bootstrap.bundle.js"></script>
+    <script>
+        (function () {
+            "use strict";
 
+            var cookieAlert = document.querySelector(".cookie-alert");
+            var acceptCookies = document.querySelector(".accept-cookies");
+
+            cookieAlert.offsetHeight; // Force browser to trigger reflow (https://stackoverflow.com/a/39451131)
+
+            if (!getCookie("acceptCookies")) {
+                cookieAlert.classList.add("show");
+            }
+
+            acceptCookies.addEventListener("click", function () {
+                setCookie("acceptCookies", true, 60);
+                cookieAlert.classList.remove("show");
+            });
+        })();
+
+        // Cookie functions stolen from w3schools
+        function setCookie(cname, cvalue, exdays) {
+            var d = new Date();
+            d.setTime(d.getTime() + (exdays * 24 * 60 * 60 * 1000));
+            var expires = "expires=" + d.toUTCString();
+            document.cookie = cname + "=" + cvalue + ";" + expires + ";path=/";
+        }
+
+        function getCookie(cname) {
+            var name = cname + "=";
+            var decodedCookie = decodeURIComponent(document.cookie);
+            var ca = decodedCookie.split(';');
+            for (var i = 0; i < ca.length; i++) {
+                var c = ca[i];
+                while (c.charAt(0) === ' ') {
+                    c = c.substring(1);
+                }
+                if (c.indexOf(name) === 0) {
+                    return c.substring(name.length, c.length);
+                }
+            }
+            return "";
+        }
+    </script>
 </body>
 
 </html>
