--- a/thevenetianresort.html
+++ b/thevenetianresort.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Venetian</title>
-    <link rel="icon" href="./assets/images/logo.png" type="image/x-icon">
+    <link rel="icon" href="./assets/images/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="./assets/css/bootstrap.css">
     <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="stylesheet" href="./assets/css/responsive.css">
@@ -94,7 +94,7 @@
                         Βέγκας που είναι εξίσου μεγαλείο, ψυχαγωγία και ιταλική αίσθηση, το The Venetian Resort
                         είναι το εισιτήριό σας για διακοπές που είναι αληθινό θέαμα στο Strip!</p>
                         <div class="info_btn_parent mt-4 mb-5 mb-lg-0">
-                            <a href="" class="common_btn" target="_blank">More info</a>
+                            <a href="" class="common_btn" target="_blank">Δείτε περισσότερα</a>
                         </div>
                 </div>
 
