--- a/wynnlasvegas.html
+++ b/wynnlasvegas.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wynn Las Vegas</title>
-    <link rel="icon" href="./assets/images/logo.png" type="image/x-icon">
+    <link rel="icon" href="./assets/images/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="./assets/css/bootstrap.css">
     <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="stylesheet" href="./assets/css/responsive.css">
@@ -97,7 +97,7 @@
                         φλερτ με την τύχη και μια γεύση από την υψηλή ζωή, το Wynn Las Vegas είναι η πρόσκλησή
                         σας σε έναν κόσμο όπου κάθε στιγμή είναι ένα αριστούργημα!</p>
                         <div class="mt-4 mb-5 mb-lg-0">
-                            <a href="" class="common_btn" target="_blank">More info</a>
+                            <a href="" class="common_btn" target="_blank">Δείτε περισσότερα</a>
                         </div>
                 </div>
 
