--- a/aboutus.html
+++ b/aboutus.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About us</title>
-    <link rel="icon" href="./assets/images/logo.png" type="image/x-icon">
+    <link rel="icon" href="./assets/images/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="./assets/css/bootstrap.css">
     <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="stylesheet" href="./assets/css/responsive.css">
@@ -46,7 +46,7 @@
             </div>
             <ul class="nav-list">
                 <li><a href="index.html" class="active">Home</a></li>
-                <li><a href="./aboutus.html">About us</a></li>
+                <li><a href="./aboutus.html" class="active">About us</a></li>
             </ul>
         </nav>
     </header>
