--- a/caesarspalace.html
+++ b/caesarspalace.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Caesars Palace</title>
-    <link rel="icon" href="./assets/images/logo.png" type="image/x-icon">
+    <link rel="icon" href="./assets/images/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="./assets/css/bootstrap.css">
     <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="stylesheet" href="./assets/css/responsive.css">
@@ -96,7 +96,7 @@
                         αίσθησης και μια δόση υπερβολής στο Λας Βέγκας, το Caesars Palace είναι η αίθουσα του
                         θρόνου για την επόμενη αξέχαστη απόδρασή σας στο Βέγκας!</p>
                         <div class="mt-4 mb-5 mb-lg-0">
-                            <a href="" class="common_btn" target="_blank">More info</a>
+                            <a href="" class="common_btn" target="_blank">Δείτε περισσότερα</a>
                         </div>
             
                 </div>
