--- a/mgmgrandhotel.html
+++ b/mgmgrandhotel.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MGM</title>
-    <link rel="icon" href="./assets/images/logo.png" type="image/x-icon">
+    <link rel="icon" href="./assets/images/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="./assets/css/bootstrap.css">
     <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="stylesheet" href="./assets/css/responsive.css">
@@ -101,7 +101,7 @@
                         διασκέδασης, το MGM Grand είναι το χρυσό εισιτήριό σας για μια εμπειρία Βέγκας που
                         βρυχάται από ενθουσιασμό!</p>
                         <div class="mt-4 mb-5 mb-lg-0">
-                            <a href="" target="_blank" class="common_btn">More info</a>
+                            <a href="" target="_blank" class="common_btn">Δείτε περισσότερα</a>
                         </div>
                 </div>
 
