--- a/thebellagio.html
+++ b/thebellagio.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bellagio</title>
-    <link rel="icon" href="./assets/images/logo.png" type="image/x-icon">
+    <link rel="icon" href="./assets/images/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="./assets/css/bootstrap.css">
     <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="stylesheet" href="./assets/css/responsive.css">
@@ -97,7 +97,7 @@
                         διάθεση για μάθημα, φαντασία και πολλά wow-factor, το The Bellagio είναι το χρυσό εισιτήριό
                         σας για μια εμπειρία Βέγκας που δεν είναι τίποτα λιγότερο από μαγική!</p>
                         <div class="mt-4 mb-5 mb-lg-0">
-                            <a href="" class="common_btn" target="_blank">More info</a>
+                            <a href="" class="common_btn" target="_blank">Δείτε περισσότερα</a>
                         </div>
                 </div>
 
