--- a/thecosmopolitan.html
+++ b/thecosmopolitan.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Cosmopolitan</title>
-    <link rel="icon" href="./assets/images/logo.png" type="image/x-icon">
+    <link rel="icon" href="./assets/images/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="./assets/css/bootstrap.css">
     <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="stylesheet" href="./assets/css/responsive.css">
@@ -98,7 +98,7 @@
                         εμπειρία στο Βέγκας που είναι εξίσου κομψή, ζωντανή και λίγο επαναστατική, το The
                         Cosmopolitan είναι το εισιτήριό σας για μια βραδινή έξοδο στην πόλη όπως κανένα άλλο!</p>
                         <div class="mt-4 mb-5 mb-lg-5">
-                            <a href="" class="common_btn" target="_blank">More info</a>
+                            <a href="" class="common_btn" target="_blank">Δείτε περισσότερα</a>
                         </div>
                 </div>
 
