--- a/caesarspalace.html
+++ b/caesarspalace.html
@@ -96,14 +96,14 @@
                         αίσθησης και μια δόση υπερβολής στο Λας Βέγκας, το Caesars Palace είναι η αίθουσα του
                         θρόνου για την επόμενη αξέχαστη απόδρασή σας στο Βέγκας!</p>
                         <div class="mt-4 mb-5 mb-lg-0">
-                            <a href="" class="common_btn" target="_blank">Δείτε περισσότερα</a>
+                            <a href="#" class="common_btn" target="_blank">Δείτε περισσότερα</a>
                         </div>
             
                 </div>
 
                 <div class="col-lg-6">
                     <div class="resort_card">
-                        <a href="https://www.caesars.com/caesars-palace" target="_blank"> <img
+                        <a href="#" target="_blank"> <img
                                 src="./assets/images/CaesarsPalace.jpg" alt="" class="img-fluid"></a>
                         <div class="content_section">
                             <h3 class="">Caesars Palace</h3>
