--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                 <div class="row  align-items-center">
                     <div class="col-md-3 col-lg-4">
                         <div class="resort_img image_resort_list">
-                            <a href="https://www.venetianlasvegas.com/" target="_blank"> <img
+                            <a href="./thevenetianresort.html" target="_blank"> <img
                                     src="./assets/images/TheVenetianResort.jpg" alt="" class="img-fluid"></a>
                         </div>
                     </div>
@@ -126,7 +126,7 @@
                 <div class="row  align-items-center">
                     <div class="col-md-3 col-lg-4">
                         <div class="resort_img image_resort_list">
-                            <a href="https://www.caesars.com/caesars-palace" target="_blank"> <img
+                            <a href="./caesarspalace.html" target="_blank"> <img
                                 src="./assets/images/CaesarsPalace.jpg" alt="" class="img-fluid"></a>
                         </div>
                     </div>
@@ -164,7 +164,7 @@
                 <div class="row  align-items-center">
                     <div class="col-md-3 col-lg-4">
                         <div class="resort_img image_resort_list">
-                            <a href="https://www.wynnlasvegas.com/" target="_blank"> <img
+                            <a href="./wynnlasvegas.html" target="_blank"> <img
                                 src="./assets/images/WynnLasVegas1.avif" alt="" class="img-fluid"></a>
                         </div>
                     </div>
@@ -201,7 +201,7 @@
                 <div class="row  align-items-center">
                     <div class="col-md-3 col-lg-4">
                         <div class="resort_img image_resort_list">
-                            <a href="https://www.cosmopolitanlasvegas.com/" target="_blank"> <img
+                            <a href="./thecosmopolitan.html" target="_blank"> <img
                                 src="./assets/images/TheCosmopolitanofLaVegas.jpg" alt="" class="img-fluid"></a>
                         </div>
                     </div>
@@ -236,7 +236,7 @@
                 <div class="row  align-items-center">
                     <div class="col-md-3 col-lg-4">
                         <div class="resort_img image_resort_list">
-                            <a href="https://mgmgrand.mgmresorts.com/en.html" target="_blank"> <img
+                            <a href="./thecosmopolitan.html" target="_blank"> <img
                                 src="./assets/images/MGMGrandHotelandCasino.jpg" alt="" class="img-fluid"></a>
                         </div>
                     </div>
@@ -273,7 +273,7 @@
                 <div class="row  align-items-center">
                     <div class="col-md-3 col-lg-4">
                         <div class="resort_img image_resort_list">
-                            <a href="https://bellagio.mgmresorts.com/en.html" target="_blank"> <img
+                            <a href="./thecosmopolitan.html" target="_blank"> <img
                                 src="./assets/images/TheBellagio.jpg" alt="" class="img-fluid"></a>
                         </div>
                     </div>
@@ -343,24 +343,28 @@
                 </div>
             </div>
             <div class="news_letter_inner">
+                <div class="row">
+                    <div class="col text-center">
+                        <h2 class="mb-4">Email</h3>
+                    </div>
+                </div>
                 <div class="row align-items-center">
                     <div class="col-lg-6">
                         <div class="inner_news_letter_left">
-                            <h3>Email Capture</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit nam sapiente atque
-                                consequatur, hic ut fugiat rerum delectus doloremque ab!</p>
+                            <h3>Enter your email</h3>
+                            <p>We care about your data in our privacy policy.</p>
                         </div>
                     </div>
                     <div class="col-lg-6">
                         <div class="inner_news_letter_right">
                             <div class="">
-                                <label for="">Email</label>
+                                <!-- <label for="">Email</label> -->
                                 <input type="email" class="form-control" placeholder="Enter your email">
                                 <div class="submit_btn mt-4">
                                     <a href="" class="common_btn" target="_blank">
                                         εγγραφείτε μας</a>
                                 </div>
-                                <p>We care about your data in our privacy policy.</p>
+                               
                             </div>
                         </div>
                     </div>
