--- a/mgmgrandhotel.html
+++ b/mgmgrandhotel.html
@@ -101,13 +101,13 @@
                         διασκέδασης, το MGM Grand είναι το χρυσό εισιτήριό σας για μια εμπειρία Βέγκας που
                         βρυχάται από ενθουσιασμό!</p>
                         <div class="mt-4 mb-5 mb-lg-0">
-                            <a href="" target="_blank" class="common_btn">Δείτε περισσότερα</a>
+                            <a href="#" target="_blank" class="common_btn">Δείτε περισσότερα</a>
                         </div>
                 </div>
 
                 <div class="col-lg-6">
                     <div class="resort_card">
-                        <a href="https://mgmgrand.mgmresorts.com/en.html" target="_blank"> <img
+                        <a href="#" target="_blank"> <img
                                 src="./assets/images/MGMGrandHotelandCasino.jpg" alt="" class="img-fluid"></a>
                         <div class="content_section">
                             <h3 class="">MGM Grand Hotel and Casino</h3>
