--- a/thecosmopolitan.html
+++ b/thecosmopolitan.html
@@ -98,13 +98,13 @@
                         εμπειρία στο Βέγκας που είναι εξίσου κομψή, ζωντανή και λίγο επαναστατική, το The
                         Cosmopolitan είναι το εισιτήριό σας για μια βραδινή έξοδο στην πόλη όπως κανένα άλλο!</p>
                         <div class="mt-4 mb-5 mb-lg-5">
-                            <a href="" class="common_btn" target="_blank">Δείτε περισσότερα</a>
+                            <a href="#" class="common_btn" target="_blank">Δείτε περισσότερα</a>
                         </div>
                 </div>
 
                 <div class="col-lg-6">
                     <div class="resort_card">
-                        <a href="https://www.cosmopolitanlasvegas.com/" target="_blank"> <img
+                        <a href="#" target="_blank"> <img
                                 src="./assets/images/TheCosmopolitanofLaVegas.jpg" alt="" class="img-fluid"></a>
                         <div class="content_section">
                             <h3 class="">The Cosmopolitan of Las Vegas</h3>
