--- a/thevenetianresort.html
+++ b/thevenetianresort.html
@@ -94,13 +94,13 @@
                         Βέγκας που είναι εξίσου μεγαλείο, ψυχαγωγία και ιταλική αίσθηση, το The Venetian Resort
                         είναι το εισιτήριό σας για διακοπές που είναι αληθινό θέαμα στο Strip!</p>
                         <div class="info_btn_parent mt-4 mb-5 mb-lg-0">
-                            <a href="" class="common_btn" target="_blank">Δείτε περισσότερα</a>
+                            <a href="#" class="common_btn" target="_blank">Δείτε περισσότερα</a>
                         </div>
                 </div>
 
                 <div class="col-lg-6">
                     <div class="resort_card">
-                        <a href="https://www.venetianlasvegas.com/" target="_blank"> <img
+                        <a href="#" target="_blank"> <img
                                 src="./assets/images/TheVenetianResort.jpg" alt="" class="img-fluid"></a>
                         <div class="content_section">
                             <h3 class="">The Venetian Resort</h3>
