--- a/thebellagio.html
+++ b/thebellagio.html
@@ -97,13 +97,13 @@
                         διάθεση για μάθημα, φαντασία και πολλά wow-factor, το The Bellagio είναι το χρυσό εισιτήριό
                         σας για μια εμπειρία Βέγκας που δεν είναι τίποτα λιγότερο από μαγική!</p>
                         <div class="mt-4 mb-5 mb-lg-0">
-                            <a href="" class="common_btn" target="_blank">Δείτε περισσότερα</a>
+                            <a href="#" class="common_btn" target="_blank">Δείτε περισσότερα</a>
                         </div>
                 </div>
 
                 <div class="col-lg-6">
                     <div class="resort_card">
-                        <a href="https://bellagio.mgmresorts.com/en.html" target="_blank"> <img
+                        <a href="#" target="_blank"> <img
                                 src="./assets/images/TheBellagio.jpg" alt="" class="img-fluid"></a>
                         <div class="content_section">
                             <h3 class="">The Bellagio</h3>
