--- a/wynnlasvegas.html
+++ b/wynnlasvegas.html
@@ -97,13 +97,13 @@
                         φλερτ με την τύχη και μια γεύση από την υψηλή ζωή, το Wynn Las Vegas είναι η πρόσκλησή
                         σας σε έναν κόσμο όπου κάθε στιγμή είναι ένα αριστούργημα!</p>
                         <div class="mt-4 mb-5 mb-lg-0">
-                            <a href="" class="common_btn" target="_blank">Δείτε περισσότερα</a>
+                            <a href="#" class="common_btn" target="_blank">Δείτε περισσότερα</a>
                         </div>
                 </div>
 
                 <div class="col-lg-6">
                     <div class="resort_card">
-                        <a href="https://www.wynnlasvegas.com/" target="_blank"> <img
+                        <a href="#" target="_blank"> <img
                                 src="./assets/images/WynnLasVegas1.avif" alt="" class="img-fluid"></a>
                         <div class="content_section">
                             <h3 class="">Wynn Las Vegas</h3>
