--- a/caesarspalace.html
+++ b/caesarspalace.html
@@ -54,7 +54,7 @@
 
     <!-- banner -->
     <div id="banner" class="sub_banner">
-        <img src="./assets/images/CaesarsPalacebg.jpg" alt="sub_banner_img">
+        <img src="./assets/images/Caesarspalace.jpeg" alt="sub_banner_img">
         <div class="container">
             <div class="sub_banner_content">
                 <h2>Caesars Palace</h2>
