--- a/mgmgrandhotel.html
+++ b/mgmgrandhotel.html
@@ -55,7 +55,7 @@
 
     <!-- banner -->
     <div id="banner" class="sub_banner">
-        <img src="./assets/images/mgmgrandbg.jpg" alt="sub_banner_img">
+        <img src="./assets/images/MGMGrandbanner.jpeg" alt="sub_banner_img">
         <div class="container">
             <div class="sub_banner_content">
                 <h2>MGM</h2>
