--- a/thecosmopolitan.html
+++ b/thecosmopolitan.html
@@ -55,7 +55,7 @@
 
     <!-- banner -->
     <div id="banner" class="sub_banner">
-        <img src="./assets/images/TheCosmopolitanofLasVegasbg.jpg" alt="sub_banner_img">
+        <img src="./assets/images/Cosmopolitanbanner.jpeg" alt="sub_banner_img">
         <div class="container">
             <div class="sub_banner_content">
                 <h2>The Cosmopolitan</h2>
