--- a/thevenetianresort.html
+++ b/thevenetianresort.html
@@ -53,7 +53,7 @@
 
     <!-- banner -->
     <div id="banner" class="sub_banner">
-        <img src="./assets/images/vene2.jpg" alt="sub_banner_img">
+        <img src="./assets/images/Thevenetianbanner.jpeg" alt="sub_banner_img">
         <div class="container">
             <div class="sub_banner_content">
                 <h2>The Venetian</h2>
