--- a/cookie.html
+++ b/cookie.html
@@ -52,7 +52,7 @@
     </header>
     <!-- banner -->
     <div id="banner" class="sub_banner">
-        <img src="./assets/images/Las vegas Banner.jpg" alt="sub_banner_img">
+        <img src="./assets/images/Cookiesbanner.jpeg" alt="sub_banner_img">
         <div class="container">
             <div class="sub_banner_content">
                 <h2>Πολιτική cookie</h2>
