--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     </header>
     <!-- banner -->
     <div id="banner" class="sub_banner home_page_banner">
-        <img src="./assets/images/Las vegas Banner.jpg" alt="sub_banner_img">
+        <img src="./assets/images/Homebanner.jpeg" alt="sub_banner_img">
         <div class="container">
             <div class="sub_banner_content">
                 <h2> τον οδηγό σας στο Λας Βέγκας</h2>
