--- a/terms-conditions.html
+++ b/terms-conditions.html
@@ -49,7 +49,7 @@
     </header>
     <!-- banner -->
     <div id="banner" class="sub_banner">
-        <img src="./assets/images/Las vegas Banner.jpg" alt="sub_banner_img">
+        <img src="./assets/images/termsbanner.jpeg" alt="sub_banner_img">
         <div class="container">
             <div class="sub_banner_content">
                 <h2>Όροι και Προϋποθέσεις</h2>
