--- a/index.html
+++ b/index.html
@@ -348,13 +348,13 @@
                         <div class="news_letter_email">
                             <div class="inner_news_letter_right">
                                 <div class="">
-                                    <label for="">Email</label>
-                                    <input type="email" class="form-control" placeholder="Enter your email">
+                                    <label for="">ΗΛΕΚΤΡΟΝΙΚΗ ΔΙΕΥΘΥΝΣΗ</label>
+                                    <input type="email" class="form-control" placeholder="Συμπληρώστε το email σας">
                                     <div class="submit_btn mt-4">
                                         <a href="" class="common_btn" target="_blank">
                                             εγγραφείτε μας</a>
                                     </div>
-                                    <p>We care about your data in our privacy policy.</p>
+                                    <p>Ενδιαφερόμαστε για τα δεδομένα σας στην πολιτική απορρήτου μας.</p>
                                 </div>
                             </div>
                         </div>
@@ -385,7 +385,7 @@
                 </div>
                 <div class="col-lg-4">
                     <div class="footer_right">
-                        <h2 class="mb-0 mt-1">follow us:</h2>
+                        <h2 class="mb-0 mt-1">ακολουθησε μας:</h2>
                         <ul>
                             <li><a href=""><i class="fa-brands fa-instagram"></i></a></li>
                             <li><a href=""><i class="fa-brands fa-facebook-f"></i></a></li>
