--- a/thecosmopolitan.html
+++ b/thecosmopolitan.html
@@ -135,7 +135,7 @@
                 </div>
                 <div class="col-lg-4">
                     <div class="footer_right">
-                        <h2 class="mb-0">follow us:</h2>
+                        <h2 class="mb-0 mt-1">ακολουθησε μας:</h2>
                         <ul>
                             <li><a href=""><i class="fa-brands fa-instagram"></i></a></li>
                             <li><a href=""><i class="fa-brands fa-facebook-f"></i></a></li>
