--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
                         <div class="news_letter_email">
                             <div class="inner_news_letter_right">
                                 <div class="">
-                                    <label for="">ΗΛΕΚΤΡΟΝΙΚΗ ΔΙΕΥΘΥΝΣΗ</label>
+                                    <label>ΗΛΕΚΤΡΟΝΙΚΗ ΔΙΕΥΘΥΝΣΗ</label>
                                     <input type="email" class="form-control" placeholder="Συμπληρώστε το email σας">
                                     <div class="submit_btn mt-4">
                                         <a href="" class="common_btn" target="_blank">
